--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
       <li>Trần Thị Cẩm Tú</li>
       <li>Phan Chí Trung</li>
     </ul>
+    <div class="image-with-cap" style="position: absolute; right: 10px; top: 0;">
+      <img src="img/trongnghia.png"/>
+      <div class="captain">CEO</div>
+    </div>
+    <div class="image-with-cap" style="position: absolute; right: 10px; top: 210px;">
+      <img src="img/camtu.jpg"/>
+      <div class="captain">CCO</div>
+    </div>
+    <div class="image-with-cap" style="position: absolute; right: 10px; top: 420px;">
+      <img src="img/chitrung.jpg"/>
+      <div class="captain">CTO</div>
+    </div>
   </div>
 
   <div id="officer-story" class="step" data-x="1200" data-y="0" data-rotate="0">
@@ -44,7 +56,7 @@
   <div id="office-lunch" class="step" data-x="1200" data-y="1200" data-rotate="120">
     <ul>
       <li><a href="http://ntngh2712.wixsite.com/officelunch">Office Lunch's Official site</a></li>
-      <li><a href="http://ntngh2712.wixsite.com/ntnofficelunch">TNT's Office Lunch site</a></li>
+      <li><a href="http://ntngh2712.wixsite.com/tntofficelunch">TNT's Office Lunch site</a></li>
       <li><a href="http://ntngh2712.wixsite.com/restaurant">Office Lunch site for restaurants</a></li>
     </ul>
   </div>
