reduce Nghia image's size

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <li>Phan Chí Trung</li>
     </ul>
     <div class="image-with-cap" style="position: absolute; right: 10px; top: 0;">
-      <img src="img/trongnghia.png"/>
+      <img src="img/trongnghia.jpg"/>
       <div class="captain">CEO</div>
     </div>
     <div class="image-with-cap" style="position: absolute; right: 10px; top: 210px;">
